--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,4 +1,4 @@
-<a class="feature" href="/">
+<a class="feature" href="{{ site.url }}/{{ include.path }}">
     <div class="feature-img-box">
         <img src="{{ site.url }}/img/{{ include.img }}" class="feature-img">
     </div>
