--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
   <div id="nav">
     <div id="nav-top">
       <div id="nav-sm">
-        <a href="https://github.com/Gernene" target="blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-        <a href="https://www.instagram.com/gernene.tan" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://github.com/Gernene"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/gernene.tan"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
       <div id='hamburger' onclick='hamburger(this)'>
         <div class='bar1'></div>
