--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,10 +7,7 @@
       <a href='/about'>About</a>
     </li>
     <li>
-      <a href='/web'>Websites</a>
-    </li>
-    <li>
-      <a href='/art'>Art</a>
+      <a href='/projects'>Projects</a>
     </li>
     <li>
       <a href='/resume'>Resume</a>
