--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 
 <div class="post">
     <h1 class="post-h1">{{ page.title }}</h1>
-    <h4 class="post-h4"> {{ page.date | date: "%B %-d, %Y" }} - By {{ page.author }}</h4>
+    <h4>{{ page.date | date: "%B %-d, %Y" }}</h4>
+    <img src="{{ site.url }}/img/{{ page.img }}">
+    <p class="post-desc">{{ page.desc }}</p>
     {{ content }}
 </div>
 <link rel="stylesheet" href="{{ site.url }}/css/blog.css">
