--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
     <h1 class="post-h1">{{ page.title }}</h1>
     <h4>{{ page.date | date: "%B %-d, %Y" }}</h4>
-    <img src="{{ site.url }}/img/{{ page.img }}">
+    <img src="{{ site.url }}/img/{{ page.img }}" alt="{{ page.title }}">
     <p class="post-desc">{{ page.desc }}</p>
     {{ content }}
 </div>
