--- a/css/blog.css
+++ b/css/blog.css
@@ -47,6 +47,10 @@
     font-size: .5rem;
 }
 
+.cursive {
+    font-family: cursive;
+}
+
 @media only screen and (max-width: 800px) {
     .blog-top {
       display: block;
