--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,17 @@
   <script src="https://use.fontawesome.com/d9824fe07b.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="{{ site.url }}/js/main.js"></script>
+  {% if page.custom_css %}
+      {% for stylesheet in page.custom_css %}
+          <link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+      {% endfor %}
+  {% endif %}
+
+  {% if page.custom_js %}
+      {% for js_file in page.custom_js %}
+          <script src='/js/{{ js_file }}.js' type="text/javascript"></script>
+      {% endfor %}
+  {% endif %}
 </head>
 <body>
 
