Add lazy loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 <head>
   <title>Gernene</title>
   <meta name="description" content="I'm Gernene - A full-stack developer and designer
@@ -29,7 +29,8 @@
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
   <script src="https://use.fontawesome.com/d9824fe07b.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="{{ site.url }}/js/main.js"></script>
+  <script src="/js/main.js"></script>
+
   {% if page.custom_css %}
       {% for stylesheet in page.custom_css %}
           <link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
