Add sun slayer project link

--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,6 +1,6 @@
-<a class="feature" href="{{ site.url }}/{{ include.path }}">
+<a class="feature" href="/{{ include.path }}">
     <div class="feature-img-box">
-        <img src="{{ site.url }}/img/{{ include.img }}" class="feature-img">
+        <img src="/img/{{ include.img }}" class="feature-img">
     </div>
     <div class="feature-info">
         <div class="feature-info-top">
