--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -5,4 +5,11 @@
       desc="Paintings, concepts, and other creative work." 
       img="art/thumb/rainbow-wallie-painting.jpg" 
     %}
+    {% include feature.html
+      path="sunslayer/webtoon" 
+      title="Sun Slayer" 
+      desc="A graphical clip from the WIP novel. This short webtoon explores visual storytelling with a philosophical twist."
+      img="projects/sun-slayer/webtoon/hurt.jpg"
+      cta="Read the webtoon"
+    %}
 </div>
