--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,4 +1,4 @@
-<a class="feature" href="/{{ include.path }}">
+<a class="feature" href="{{ include.path }}">
     <div class="feature-img-box">
         <img src="/img/{{ include.img }}" class="feature-img">
     </div>
