--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -8,7 +8,7 @@
     {% include feature.html
       path="sunslayer/webtoon" 
       title="Sun Slayer" 
-      desc="A graphical clip from the WIP novel. This short webtoon explores visual storytelling with a philosophical twist."
+      desc="A graphical clip from the WIP novel. This short webtoon explores visual storytelling with a philosophical twist. Warning: Spoilers and mild violence"
       img="projects/sun-slayer/webtoon/hurt.jpg"
       cta="Read the webtoon"
     %}
