--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,12 +1,12 @@
 <div class="features">
     {% include feature.html
-      path="art" 
+      path="/art" 
       title="Art & Graphics Gallery" 
       desc="Paintings, concepts, and other creative work." 
       img="art/thumb/rainbow-wallie-painting.jpg" 
     %}
     {% include feature.html
-      path="sunslayer/webtoon" 
+      path="/sunslayer/webtoon" 
       title="Sun Slayer" 
       desc="A graphical clip from the WIP novel. This short webtoon explores visual storytelling with a philosophical twist. Warning: Spoilers and mild violence"
       img="projects/sun-slayer/webtoon/hurt.jpg"
