--- a/_includes/features1.html
+++ b/_includes/features1.html
@@ -1,18 +1,18 @@
 <div class="features">
     {% include feature.html
-      path="projects/silentauction" 
+      path="/projects/silentauction" 
       title="Silent Auction" 
       desc="Creating a web-based silent auction. (React + NodeJS)" 
       img="projects/silent-auction/thumb.png" 
     %}
     {% include feature.html
-      path="projects/fhs" 
+      path="/projects/fhs" 
       title="Fairview High School" 
       desc="Redesigning a high school website for responsive and better content organization. (Ruby on Rails)" 
       img="projects/fhs/thumb.jpg" 
     %}
     {% include feature.html
-      path="projects/jsc" 
+      path="/projects/jsc" 
       title="Journal Supplies Co" 
       desc="Building a custom ecommerce site. (NodeJS)" 
       img="projects/jsc/thumb.jpg" 
@@ -24,13 +24,13 @@
       img="projects/jellydo/thumb.jpg" 
     %}
     {% include feature.html
-      path="projects/ogb" 
+      path="/projects/ogb" 
       title="Operation Give Back" 
       desc="Developing a student volunteer match site. (Ruby on Rails)" 
       img="projects/ogb/thumb.jpg" 
     %}
     {% include feature.html
-      path="projects/solisles" 
+      path="/projects/solisles" 
       title="Solisles" 
       desc="A quirky virtual pet site made with love. (PHP + MySQL)" 
       img="projects/solisles/thumb.png" 
