Fix broken link

--- a/_includes/features1.html
+++ b/_includes/features1.html
@@ -18,7 +18,7 @@
       img="projects/jsc/thumb.jpg" 
     %}
     {% include feature.html
-      path="projects/jellydo" 
+      path="/projects/jellydo" 
       title="Jelly Do" 
       desc="A simple to-do list app that experiments with animation and CSS visuals. (React, NodeJS)" 
       img="projects/jellydo/thumb.jpg" 
