Update case studies

--- a/_includes/features1.html
+++ b/_includes/features1.html
@@ -1,8 +1,20 @@
 <div class="features">
     {% include feature.html
-      path="/projects/silentauction" 
+      path="/projects/halp" 
+      title="Halp" 
+      desc="Halp builds conversational support ticketing products. I contributed to the company as an engineering intern."
+      img="projects/halp/thumb.png" 
+    %}
+    {% include feature.html
+      path="/projects/docforge" 
+      title="DocForge" 
+      desc="Building a tool to simplify, incentivize, and transform documentation. (React + NodeJS)"
+      img="projects/docforge/thumb.png" 
+    %}
+    {% include feature.html
+      path="/projects/silentacution" 
       title="Silent Auction" 
-      desc="Creating a web-based silent auction. (React + NodeJS)" 
+      desc="Building a web-based silent auction. (React + NodeJS)"
       img="projects/silent-auction/thumb.png" 
     %}
     {% include feature.html
@@ -18,21 +30,9 @@
       img="projects/jsc/thumb.jpg" 
     %}
     {% include feature.html
-      path="/projects/jellydo" 
-      title="Jelly Do" 
-      desc="A simple to-do list app that experiments with animation and CSS visuals. (React, NodeJS)" 
-      img="projects/jellydo/thumb.jpg" 
-    %}
-    {% include feature.html
       path="/projects/ogb" 
       title="Operation Give Back" 
       desc="Developing a student volunteer match site. (Ruby on Rails)" 
       img="projects/ogb/thumb.jpg" 
-    %}
-    {% include feature.html
-      path="/projects/solisles" 
-      title="Solisles" 
-      desc="A quirky virtual pet site made with love. (PHP + MySQL)" 
-      img="projects/solisles/thumb.png" 
     %}
 </div>
