--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,5 +1,17 @@
 <div class="features">
     {% include feature.html
+      path="/projects/jellydo" 
+      title="Jelly Do" 
+      desc="A simple to-do list app that experiments with animation and CSS visuals. (React, NodeJS)" 
+      img="projects/jellydo/thumb.jpg" 
+    %}
+    {% include feature.html
+      path="/projects/solisles" 
+      title="Solisles" 
+      desc="A quirky virtual pet site made with love. (PHP + MySQL)" 
+      img="projects/solisles/thumb.png" 
+    %}
+    {% include feature.html
       path="/art" 
       title="Art & Graphics Gallery" 
       desc="Paintings, concepts, and other creative work." 
