Add Google analytics

--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,5 +1,12 @@
 <div class="features">
     {% include feature.html
+      path="https://sproutinventions.com"
+      title="Sprout Inventions"
+      desc="Sprout Inventions aims to use machinery and automation creations to solve complex problems. I'm their designer and web developer."
+      img="projects/sprout-inventions-logo.jpg"
+      cta="Visit Sprout Inventions"
+    %}
+    {% include feature.html
       path="/projects/jellydo" 
       title="Jelly Do" 
       desc="A simple to-do list app that experiments with animation and CSS visuals. (React, NodeJS)" 
