--- a/css/wcagdataviz.css
+++ b/css/wcagdataviz.css
@@ -5,6 +5,7 @@ body {
   font-size: 1.1rem;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 a {
@@ -19,6 +20,7 @@ div {
   display: flex;
   margin: 0 auto;
   max-width: 1200px;
+  padding: 0 16rem;
 }
 
 .sidebar {
@@ -198,7 +200,6 @@ div {
 
 .graph-lawsuits {
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  border-left: 1px solid rgba(0, 0, 0, .2);
   display: flex;
   flex-direction: column;
   height: 60vh;
@@ -221,7 +222,9 @@ div {
   background: #2969FF;
   border-radius: .8rem .8rem 0 0;
   color: #fff;
+  font-weight: bold;
   margin: 0 0 0 2rem;
+  padding: .5rem;
   position: absolute;
   text-align: center;
   width: 6rem;
@@ -254,6 +257,14 @@ div {
 .slide-0 {
   background: #2969FF;
   height: 100vh;
+  position: relative;
+}
+
+.heading {
+  margin: 3rem 5rem 0 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .title {
@@ -270,4 +281,11 @@ div {
 .subtitle {
   color: #FFCC66;
   font-size: 3rem;
+  text-transform: lowercase;
+}
+
+.sidebar {
+  bottom: 0;
+  left: 0;
+  position: fixed;
 }
