--- a/css/wcagdataviz.css
+++ b/css/wcagdataviz.css
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-  color: #4747d1;
+  color: #000066;
 }
 
 div {
@@ -24,7 +24,43 @@ div {
 }
 
 .sidebar {
+  font-weight: bold;
+  padding: .5rem 0;
   width: 18rem;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar a::after {
+  content: "";
+  height: 0;
+  border: .5rem solid transparent;
+  border-left: .5rem solid rgba(0, 0, 0, .8);
+  margin: .25rem 0 0 .5rem;
+  position: absolute;
+  transition: all .4s ease;
+  width: 0;
+}
+
+.sidebar a {
+  color: rgba(0, 0, 0, .8);
+  display: block;
+  padding: .5rem 1rem;
+  text-decoration: none;
+  transition: all .4s ease;
+}
+
+.sidebar a:hover {
+  color: #000066;
+  text-decoration: underline;
+}
+
+.sidebar a:hover::after {
+  border-left: .5rem solid #000066;
 }
 
 .portal {
@@ -84,7 +120,7 @@ div {
 }
 
 .wcag-dataviz-cube.yes {
-  background: #4747d1
+  background: #000066;
 }
 
 .wcag-dataviz-cube.no {
@@ -118,7 +154,7 @@ div {
 
 .map-dataviz-marker {
   align-items: center;
-  background: #4747d1;
+  background: #000066;
   border-radius: 50%;
   color: #fff;
   display: flex;
@@ -179,12 +215,12 @@ div {
 .progress-bar {
   border-radius: .5rem;
   display: flex;
-  height: 3rem;
+  height: 4rem;
   overflow: hidden;
 }
 
 .progress-bar .base {
-  background: #4747d1;
+  background: #000066;
   flex: 1;
 }
 
@@ -215,7 +251,7 @@ div {
 }
 
 .graph-lawsuits .bar {
-  background: #4747d1;
+  background: #000066;
   border-radius: .8rem .8rem 0 0;
   color: #fff;
   font-weight: bold;
@@ -252,11 +288,21 @@ div {
 
 .slide-0 {
   align-items: center;
-  background: #4747d1;
+  background: #000066;
   display: flex;
   height: 100vh;
   justify-content: flex-end;
   position: relative;
+}
+
+.slide-0-bg {
+  position: fixed;
+}
+
+.other-slides {
+  background: #fff;
+  position: relative;
+  z-index: 10;
 }
 
 .heading {
@@ -271,11 +317,11 @@ div {
 }
 
 .title span {
-  color: #FFCC66;
+  color: #ffbb33;
 }
 
 .subtitle {
-  color: #FFCC66;
+  color: #ffbb33;
   font-size: 3rem;
   text-transform: lowercase;
 }
@@ -290,7 +336,7 @@ div {
   left: 0;
   margin: 0 0 0 4rem;
   perspective: 100vw;
-  position: absolute;
+  position: fixed;
   top: 10rem;
 }
 
@@ -335,7 +381,7 @@ div {
 }
 
 .access-anim-bar-t {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #fff;
   border-right: 0;
   height: 2rem;
@@ -352,7 +398,7 @@ div {
 }
 
 .access-anim-bar-r {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #fff;
   position: absolute;
   transform: rotateY(90deg) translateZ(1rem);
@@ -398,7 +444,7 @@ div {
 }
 
 .access-anim-progress-t {
-  background: #4747d1;
+  background: #000066;
   display: flex;
   height: 2rem;
   position: absolute;
@@ -407,7 +453,7 @@ div {
 }
 
 .access-anim-progress-f {
-  background: #4747d1;
+  background: #000066;
   display: flex;
   height: 2rem;
   position: absolute;
@@ -416,7 +462,7 @@ div {
 }
 
 .access-anim-progress-r {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #fff;
   height: 2rem;
   left: 6rem;
@@ -432,13 +478,13 @@ div {
 }
 
 .access-anim-progress-t-l {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #ffbb33;
   width: 4rem;
 }
 
 .access-anim-progress-t-r {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #fff;
   border-left: 0;
   border-right: 0;
@@ -455,8 +501,8 @@ div {
 
 .access-anim-ppl {
   background: #fff;
-  border: 3px solid #4747d1;
-  color: #4747d1;
+  border: 3px solid #000066;
+  color: #000066;
   font-size: 2rem;
   padding: 1rem;
   transform: rotateX(-30deg) rotateY(-45deg) translateY(5rem) translateZ(3rem);
@@ -492,7 +538,7 @@ div {
 }
 
 .access-anim-cube-t {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #ffbb33;
   transform: rotateX(-90deg) translateZ(-.5rem);
 }
@@ -503,7 +549,7 @@ div {
 }
 
 .access-anim-cube-r {
-  background: #4747d1;
+  background: #000066;
   border: 3px solid #ffbb33;
   transform: rotateY(90deg) translateZ(.5rem);
 }
