--- a/css/wcagdataviz.css
+++ b/css/wcagdataviz.css
@@ -24,6 +24,22 @@ section {
   height: 5rem;
 }
 
+.btn-primary {
+  background: #000066;
+  border: 3px solid #000066;
+  border-radius: .5rem;
+  color: #fff;
+  font-size: 1.1rem;
+  padding: 1rem 2rem;
+  transition: all .4s ease;
+}
+
+.btn-primary:hover {
+  background: #fff;
+  color: #000066;
+  cursor: pointer;
+}
+
 .wrapper {
   display: flex;
   margin: 0 auto;
@@ -223,6 +239,13 @@ section {
   height: .8rem;
   left: 75%;
   top: 70%;
+  width: .8rem;
+}
+
+.map-dataviz-marker.oh {
+  height: .8rem;
+  left: 72%;
+  top: 37%;
   width: .8rem;
 }
 
