--- a/css/wcagdataviz.css
+++ b/css/wcagdataviz.css
@@ -3,6 +3,7 @@ body {
   color: rgba(0, 0, 0, .8);
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.1rem;
+  line-height: 1.5em;;
   margin: 0;
   overflow-x: hidden;
   padding: 0;
