--- a/css/wcagdataviz.css
+++ b/css/wcagdataviz.css
@@ -20,6 +20,20 @@ div {
 
 section {
   margin: 0 0 20rem 0;
+  position: relative;
+}
+
+h1 a,
+h2 a,
+h3 a {
+  color: rgba(0, 0, 0, .8);
+  font-size: 1rem;
+}
+
+h1 a:hover,
+h2 a:hover,
+h3 a:hover {
+  color: #000099;
 }
 
 .clear {
@@ -845,6 +859,14 @@ section {
 }
 
 @media only screen and (min-width: 900px) {
+  h1 a,
+  h2 a,
+  h3 a {
+    position: absolute;
+    right: -2rem;
+    top: 0;
+  }
+
   .heading-wrap {
     align-items: center;
     display: flex;
