--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,5 +1,11 @@
 <div class="features">
     {% include feature.html
+      path="/projects/sarea"
+      title="Sarea"
+      desc="Sarea is an events-centric networking platform for business."
+      img="projects/sarea/sarea-thumb.jpg"
+    %}
+    {% include feature.html
       path="https://sproutinventions.com"
       title="Sprout Inventions"
       desc="Sprout Inventions aims to use machinery and automation creations to solve complex problems. I'm their designer and web developer."
@@ -9,7 +15,7 @@
     {% include feature.html
       path="/projects/jellydo" 
       title="Jelly Do" 
-      desc="A simple to-do list app that experiments with animation and CSS visuals. (React, NodeJS)" 
+      desc="A simple to-do list app that experiments with animation and CSS visuals. (React + NodeJS)" 
       img="projects/jellydo/thumb.jpg" 
     %}
     {% include feature.html
@@ -17,6 +23,13 @@
       title="Solisles" 
       desc="A quirky virtual pet site made with love. (PHP + MySQL)" 
       img="projects/solisles/thumb.png" 
+    %}
+    {% include feature.html
+      path="http://ddcc.gernene.com"
+      title="Doki Doki Code Club (DDCC)" 
+      desc="A totally-not-cringey DDLC fan game inspired by my experience in school tech clubs. Modify actual code files to impact game progression! (Python)"
+      img="projects/ddcc-thumb.jpg"
+      cta="Visit DDCC's website"
     %}
     {% include feature.html
       path="/art" 
