Add Princess Maid

--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -44,4 +44,12 @@
       img="projects/sun-slayer/webtoon/hurt.jpg"
       cta="Read the webtoon"
     %}
+    {% include feature.html
+      path="/projects/princessmaid" 
+      title="Princess Maid" 
+      desc="Retelling &quot;Princess and the Pea&quot; in a modern Singaporean context."
+      img="projects/princess-maid-thumb.jpg"
+      cta="Watch the Video"
+    %}
+
 </div>
