Update portfolio for 2024

--- a/_includes/features1.html
+++ b/_includes/features1.html
@@ -1,5 +1,11 @@
 <div class="features">
     {% include feature.html
+      path="/projects/chapter-and-club" 
+      title="Chapter & Club" 
+      desc="Building a social network for writers. (NextJS + NodeJS)" 
+      img="projects/chapter-and-club/thumb.jpg" 
+    %}
+    {% include feature.html
       path="/projects/halp" 
       title="Halp" 
       desc="Halp builds conversational support ticketing products. I contributed to the company as an engineering intern."
@@ -28,11 +34,5 @@
       title="Journal Supplies Co" 
       desc="Building a custom ecommerce site. (NodeJS)" 
       img="projects/jsc/thumb.jpg" 
-    %}
-    {% include feature.html
-      path="/projects/ogb" 
-      title="Operation Give Back" 
-      desc="Developing a student volunteer match site. (Ruby on Rails)" 
-      img="projects/ogb/thumb.jpg" 
     %}
 </div>
