--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,5 +1,11 @@
 <div class="features">
     {% include feature.html
+      path="/projects/ogb" 
+      title="Operation Give Back" 
+      desc="Developing a student volunteer match site. (Ruby on Rails)" 
+      img="projects/ogb/thumb.jpg" 
+    %}
+    {% include feature.html
       path="/projects/sarea"
       title="Sarea"
       desc="Sarea is an events-centric networking platform for business."
@@ -31,7 +37,7 @@
       img="projects/ddcc-thumb.jpg"
       cta="Visit DDCC's website"
     %}
-    {% include feature.html
+    <!-- {% include feature.html
       path="/art" 
       title="Art & Graphics Gallery" 
       desc="Paintings, concepts, and other creative work." 
@@ -50,6 +56,6 @@
       desc="Retelling &quot;Princess and the Pea&quot; in a modern Singaporean context."
       img="projects/princess-maid-thumb.jpg"
       cta="Watch the Video"
-    %}
+    %} -->
 
 </div>
