--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
   </div>
 
   <div id="footer">
-    &copy; Gernene 2016-2021
+    &copy; Gernene 2016-{{ site.time | date: '%Y' }}
     <div id="footer-sm">
       <a href="https://github.com/Gernene" target="blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
       <a href="https://www.instagram.com/gernene.tan" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
